Fix css bug on Firefox.

--- a/app/stylesheets/themes/plain/_settings.sass
+++ b/app/stylesheets/themes/plain/_settings.sass
@@ -7,6 +7,7 @@
       display: block
       text-align: center
   form
+    max-width: 355px
     float: left
     h3
       font-size: 17px
